src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
  labels:
    app: events-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      containers:
      - name: events-service
        image: ghcr.io/mryndin/ya-02/events-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  selector:
    app: events-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
