src/kubernetes/proxy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service
  namespace: cinemaabyss
  labels:
    app: proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-service
  template:
    metadata:
      labels:
        app: proxy-service
    spec:
      containers:
      - name: proxy-service
        # ПРОВЕРЬТЕ ИМЯ РЕПОЗИТОРИЯ
        image: ghcr.io/mryndin/ya-02/proxy-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: cinemaabyss
spec:
  selector:
    app: proxy-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
