src/kubernetes/circuit-breaker-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movies-circuit-breaker
  namespace: cinemaabyss
spec:
  host: movies-service.cinemaabyss.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1 # Максимум 1 TCP соединение
      http:
        http1MaxPendingRequests: 1 # Максимум 1 запрос в очереди
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
