src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinemaabyss-ingress
  namespace: cinemaabyss
  annotations:
    # Используем стандартный ingress-контроллер minikube (nginx)
    kubernetes.io/ingress.class: "nginx"
    # Отключаем обязательный SSL, так как проверяем локально через http
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Позволяет корректно обрабатывать пути
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: cinemaabyss.example.com
      http:
        paths:
          # Основное правило: всё, что начинается с /, уходит на прокси
          # Прокси сам решит, отправить запрос в монолит или в микросервис фильмов
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 8000
          
          # Правило для создания событий (нужно для тестов Postman)
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: events-service
                port:
                  number: 8082
